docs: adding api docs(course) (#44)
