# internal/infrastructure/handlers/course_handler.go
@@ -2,12 +2,11 @@ package handlers
 
 import (
 	"net/http"
+	"ngodeyuk-core/internal/domain/dtos"
+	"ngodeyuk-core/internal/services"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
-
-	"ngodeyuk-core/internal/domain/dtos"
-	"ngodeyuk-core/internal/services"
 )
 
 type CourseHandler interface {
@@ -26,6 +25,15 @@ func NewCourseHandler(service services.CourseService) CourseHandler {
 	return &courseHandler{service}
 }
 
+// Create Course godoc
+// @Summary Create a new course
+// @Description Create a new course with the provided details.
+// @Tags Course
+// @Accept json
+// @Produce json
+// @Param course body dtos.CourseDTO true "Create course data details"
+// @Success 201 {object} map[string]interface{}
+// @Router /api/course [post]
 func (handler *courseHandler) Create(ctx *gin.Context) {
 	var input dtos.CourseDTO
 
@@ -37,7 +45,7 @@ func (handler *courseHandler) Create(ctx *gin.Context) {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	ctx.JSON(http.StatusOK, gin.H{
+	ctx.JSON(http.StatusCreated, gin.H{
 		"data": gin.H{
 			"name": input.Title,
 			"img":  input.Img,
@@ -45,6 +53,16 @@ func (handler *courseHandler) Create(ctx *gin.Context) {
 	})
 }
 
+// Update Course godoc
+// @Summary Update an existing course
+// @Description Update an existing course identified by course ID with the provided details.
+// @Tags Course
+// @Accept json
+// @Produce json
+// @Param course_id path int true "Course ID"
+// @Param course body dtos.CourseDTO true "Updated course data details"
+// @Success 200 {object} map[string]interface{}
+// @Router /api/course/{course_id} [patch]
 func (handler *courseHandler) Update(ctx *gin.Context) {
 	var input dtos.CourseDTO
 	if err := ctx.ShouldBindJSON(&input); err != nil {
@@ -74,6 +92,13 @@ func (handler *courseHandler) Update(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"message": "update course successfully"})
 }
 
+// GetAll Courses godoc
+// @Summary Retrieve all courses
+// @Description Retrieve a list of all courses.
+// @Tags Course
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /api/course [get]
 func (handler *courseHandler) GetAll(ctx *gin.Context) {
 	courses, err := handler.service.GetAll()
 	if err != nil {
@@ -94,6 +119,14 @@ func (handler *courseHandler) GetAll(ctx *gin.Context) {
 	})
 }
 
+// GetByID Course godoc
+// @Summary Retrieve a course by ID
+// @Description Retrieve a course identified by course ID.
+// @Tags Course
+// @Produce json
+// @Param course_id path int true "Course ID"
+// @Success 200 {object} map[string]interface{}
+// @Router /api/course/{course_id} [get]
 func (handler *courseHandler) GetByID(ctx *gin.Context) {
 	courseIdstr := ctx.Param("course_id")
 	courseId, err := strconv.ParseUint(courseIdstr, 10, 32)
@@ -116,6 +149,13 @@ func (handler *courseHandler) GetByID(ctx *gin.Context) {
 	})
 }
 
+// DeleteByID Course godoc
+// @Summary Delete a course by ID
+// @Description Delete a course identified by course ID.
+// @Tags Course
+// @Param course_id path int true "Course ID"
+// @Success 200 {object} map[string]interface{}
+// @Router /api/course/{course_id} [delete]
 func (handler *courseHandler) DeleteByID(ctx *gin.Context) {
 	courseIdstr := ctx.Param("course_id")
 	courseId, err := strconv.ParseUint(courseIdstr, 10, 32)
